[tool.poetry]
name = "ssh-mgr"
version = "1.0.1"
description = "A Tool to manage ssh connection"

license = "MIT"

authors = [
    "shabbywu <shabbywu@qq.com>"
]

readme = 'README.md'  # Markdown files are supported

keywords = ['ssh']

packages = [
    { include = "ssh2_wrapper.sh" },
    { include = "ssh2" },
]

[tool.poetry.dependencies]
python = "^3.8"  # Compatible python versions must be declared here
click = ">=7.0"
PyYaml = "6.0.2"
sqlalchemy = "<2"
cryptography = "*"
aenum = "<3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"

[tool.poetry.extras]
ioa = ["ssh2-ioa"]

[tool.poetry.scripts]
ssh2 = 'ssh2.cli.main:cli'

[tool.black]
line-length = 119
skip-string-normalization = 'true'

[tool.isort]
multi_line_output = 3
include_trailing_comma = 'true'
force_grid_wrap = 0
use_parentheses = 'true'
line_length = 119
known_first_party = ["tests"]

[tool.flake8]
ignore = "C408,E501,W503,W291,E203"
exclude = '''
    *.pyc,
    .git,
    __pycache__,
'''
max-line-length=119
max-complexity=12
format = "pylint"
show_source = "true"
statistics = "true"
count = "true"
